Fix: Remove extra padding around application
Remove unnecessary padding and containers to fix the extra padding around the application.

--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,9 @@
 @layer base {
   * {
     @apply border-border;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
 
   body {
@@ -107,11 +110,15 @@
   html {
     width: 100%;
     min-width: 100%;
+    margin: 0;
+    padding: 0;
   }
 
   #root {
     width: 100%;
     min-width: 100%;
+    margin: 0;
+    padding: 0;
   }
 }
 
